--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.20.1+build.10
 loader_version=0.15.9
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.0.1
 maven_group=com.nora
 archives_base_name=rpgsp
 
@@ -21,3 +21,4 @@ tiny_config_version=2.3.2
 cloth_config_version=11.1.106
 player_anim_version=1.0.2+1.19.4
 spell_engine_version=0.15.12+1.20.1
+rpgmana_version=1.0.8.2
